# alive

./: .gitignore  NOTES.md  SPEC.MD  app.py  demo_counter.py  pyproject.toml  settings.py  state.py  urls.py
alive/: INSTRUCTIONS.md  LICENSE  README.md  __init__.py  conf.py  mixin.py  pyproject.toml  signals.py  store.py  template_loader.py  ui.py  views.py
alive/components/: __init__.py  editable_field.py  item.py  theme.py
alive/static/alive/css/: alive.css
alive/static/alive/js/: dragdrop.js  hexmap.js  keyboard.js
alive/templates/: create_form.html  frame_bottom.html  frame_top.html  grid.html  hand_footer.html  index.html  items.html  map.html  search.html  situation.html  situation_cards.html
cards/: admin.py  models.py  signals.py  store.py
cards/migrations/: 0001_initial.py
components/: __init__.py  card.py
components/templates/: editable_field.html
meals/: admin.py  models.py
meals/migrations/: 0001_initial.py  0002_tag_meal_tags_recipe_tags.py
static/css/: cards.css
views/cards/: cards.css  cards.html  cards.py
