[project]
name = "alive"
version = "2025.2.4"
description = "Real-time Django model views with PyView"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=4.2",
    "pyview-web",
    "asgiref",
    "markdown",
]

[project.urls]
Homepage = "https://github.com/mikaelhonkala/alive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "dist/",
    "__pycache__/",
    "*.pyc",
    ".gitignore",
    "INSTRUCTIONS.md",
    "PKG-INFO",
    "pyproject.toml",
]

[tool.hatch.build.targets.wheel.sources]
"." = "alive"

[tool.hatch.build.targets.sdist]
exclude = [
    "dist/",
    "__pycache__/",
    "*.pyc",
]
